# adaptive_nof1

./: .gitignore  .gitmodules  README.md  observation.py  pyproject.toml  pytest.ini  setup.cfg  simulation.ipynb  simulation.py  treatmentplan.py
adaptive_nof1/: simulation.py
notebooks/: Adaptive_Policy_Comparison.ipynb  Basic.ipynb  Inference_In_Adaptive_Sampling.ipynb  Running_R_code_in_python.ipynb  balanced_thompson_sampling_experiments.html  balanced_thompson_sampling_experiments.ipynb  crossover_example.ipynb  demo_discrete_linear_model.ipynb  demo_hello_world.ipynb  demo_multiple_actions.ipynb  mt_MCMC_KL_Divergence.ipynb  mt_adjusting_trial_with_adaptive.ipynb  mt_background.ipynb  mt_case_study_0_counterfactuals.ipynb  mt_case_study_1.ipynb  mt_case_study_2.ipynb  mt_case_study_2a.html  mt_case_study_2a.ipynb  mt_case_study_2b-Copy1.ipynb  mt_case_study_2b.ipynb  mt_case_study_3.ipynb  mt_case_study_coin_example.ipynb  mt_generic_nof1_trial.ipynb  mt_risk_aware_ts.ipynb  mt_simple_pooling_vs_non_pooling.ipynb  priors_for_normal_inverse_gamma.ipynb  robust_adaptive_self_experiments.ipynb  sampling_t_vs_inv_gamma.ipynb  self_experimentation_model.ipynb  simulation.ipynb
scripts/: run-demo-notebooks.sh
src/: bayes.py  examples.py  metric.py  observation.py  policy.py  simulation.py  treatmentplan.py
tests/: fixtures.py  helper_functions.py  mocks.py  test_balanced_thompson_sampling.py  test_bayes.py  test_beta_model.py  test_conjugate_normal_model.py  test_dict_helpers.py  test_entropy.py  test_fast_normal_approximation.py  test_helpers.py  test_history.py  test_models.py  test_normal_known_variance.py  test_observations.py  test_pytensor_pymc.py  test_regret_against_other_configuration.py  test_sequential_halving.py  (+7 more)
(+97 files in other folders)
