[metadata]
name = adpative_nof1
version = 0.0.1
author = Dominik Meier
author_email = author@example.com
description = A library for simulating adaptive Nof1 Trials
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HIAlab/adaptive_nof1
project_urls =
    Bug Tracker = https://github.com/HIAlab/adaptive_nof1/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
include_package_data=True
python_requires = >=3.11
install_requires =
    numpy
    pandas

[options.extras_require]
dev =
    pytest
    pytest-nbmake
    black

[options.packages.find]
where = .
